<resources>
    <string name="app_name">Jetcab</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account_nsign_up_here">Don\'t have an account?\nSign up here</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="surname">SurName</string>
    <string name="birthday">BirthDay</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="prev">Prev</string>
    <string name="add_destinations_description1">Add here the main destinations you\'re interested in receiving notifications about.</string>
    <string name="add_destinations_description2">Add here all destinations you\'re interested in receiving notifications about.</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flight_details">Flight details</string>
    <string name="plane">Plane:</string>
    <string name="cruise_speed">Cruise speed:</string>
    <string name="hangar">Hangar:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="etd">ETD:</string>
    <string name="eta">ETA</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>

    <string name="about_jetcab"></string>

</resources>
